--- a/day_1.ipynb
+++ b/day_1.ipynb
@@ -53,11 +53,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Индекс примера   | Признак_1 | Признак_2 | Признак_3 | Признак_4 | Признак_5 |\n",
-    "-----------------|-----------|-----------|-----------|-----------|-----------|\n",
-    " 1               | 10        | 20        | \"строка 1\"| True      | 3.1415926 |   \n",
-    " 2               | 15        | 10        | \"строка 2\"| False     | 2.71      |\n",
-    " 3               | 12        | 40        | \"строка 3\"| False     | -1.12345  |"
+    "Индекс примера   | Признак_1 | Признак_2 | Признак_3 | Признак_4 | Признак_5 \n",
+    "-----------------|-----------|-----------|-----------|-----------|-----------\n",
+    " 1               | 10        | 20        | \"строка 1\"| True      | 3.1415926    \n",
+    " 2               | 15        | 10        | \"строка 2\"| False     | 2.71      \n",
+    " 3               | 12        | 40        | \"строка 3\"| False     | -1.12345  "
    ]
   },
   {
@@ -281,13 +281,15 @@
    "source": [
     "Уже из данной диаграммы видно, что чем больше размер и вес, тем мангустин ***обычно*** вкуснее, но есть и исключения. Мы не будем особо мудрствовать, и используем следующий метод для построения модели\n",
     "\n",
-    "1. Модель - пусть это функция `tasty = f(weight, radius) > threshold = weight * a + radius * b > threshold`, где `a`, `b`, и `threshold` - называются параметрами модели,\n",
+    "1. Модель - пусть это функция $tasty = f(weight, radius) > threshold = weight * a + radius * b > threshold$, где `a`, `b`, и `threshold` - называются параметрами модели,\n",
+    "\n",
     "2. Метрика (ошибка модели) - количество *неправильно* классифицированных примеров,\n",
     "\n",
-    "Алгоритм будет следующим: \n",
-    "- `a = (max(weight) - min(weight)) / количество записей`, \n",
-    "- `b = (max(radius) - min(radius)) / количество записей`,\n",
-    "- `threshold` находится перебором с шагом 1 по всем записям, лучшим считается тот, который дает минимум нашей метрике."
+    "Пусть `N` - количество примеров (известных нам мангустинов), и пусть наш алгоритм будет следующим: \n",
+    "$$a = \\frac {max(weight) - min(weight)} {N},$$\n",
+    "$$b = \\frac {max(radius) - min(radius)} {N},$$\n",
+    "\n",
+    "`threshold` же находится перебором с шагом 1 по всем записям, лучшим считается тот, который дает минимум нашей метрике."
    ]
   },
   {
@@ -564,9 +566,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Рассмотрим распределенную на (-Infinity, +Infinity) случайную величину, со средним значением в числе 10, и такую чтобы её значения с 95%-вероятностью попадали в диапазон от +5 до +15. \n",
+    "Рассмотрим распределенную на (-Infinity, +Infinity) случайную величину, со средним значением в числе 10, и такую чтобы её значения с чуть более чем 95%-вероятностью попадали в диапазон от +5 до +15. \n",
     "\n",
-    "Для того, чтобы значения *нормально распределенной случайной величины* (это значит функция распределения имеет определенный заданный вид, пока не суть какой) в 95% случаев лежали в заданном диапазоне `(среднее - L, среднее + L)`, нужно задать её *стандартное отклонение* как `L / 2`."
+    "Для того, чтобы значения *нормально распределенной случайной величины* (это значит функция распределения имеет определенный заданный вид, пока не суть какой) в более чем 95% случаев лежали в заданном диапазоне `(среднее - L, среднее + L)`, нужно задать её *стандартное отклонение* как `L / 2`."
    ]
   },
   {
@@ -820,9 +822,10 @@
    "source": [
     "**Закон больших чисел**: если все случайные величины у нас независимы и одинаково распределены, то ***выборочное среднее*** стремится при увеличении числа испытаний к ***математическому ожиданию***.\n",
     "\n",
-    "Математическое ожидание - это взвешенные по вероятностям исходы, то есть\n",
+    "Математическое ожидание - это взвешенные по вероятностям исходы, то есть в дискретном случае,\n",
     "\n",
-    "`математическое ожидание = вероятность исхода 1 * значение исхода 1 + вероятность исхода 2 * значение исхода 2 + ....`\n",
+    "$$E[x] = \\sum p_i x_i,$$\n",
+    "где $x_i$ - исходы (значения) случайной величины, а $p_i$ - их вероятность.\n",
     "\n",
     "По сути, это означает, что в условиях незнания среднего по всем возможным ситуациям (по \"всем данным в мире\"), мы можем при большом количестве данных заменить его выборочным средним. В нашем при мере с ростом, это означает, что средний рост по всё более увеличивающейся выборке будет ближе к некоторому истинному значению (по \"всем данным в мире\")."
    ]
@@ -831,7 +834,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Центральная предельная теорема**: для независимых случайных величин из одного распределения со средним `M` и стандартным отклонением `S`, их выборочное среднее стремится при увеличении количества испытаний `n` - к нормальному распределению с тем же средним и разбросом `S * S / n`.\n",
+    "**Центральная предельная теорема**: для независимых случайных величин из одного распределения со средним $M$ и стандартным отклонением $S$, их выборочное среднее стремится (при увеличении количества испытаний $n$) к нормальному распределению с тем же средним и разбросом $\\frac {S^2} {n}$.\n",
     "\n",
     "Возвращаясь к нашему примеру с ростом, это означает, что по мере роста выборки, средний рост будет распределен как нормальная случайная величина, и чем точнее нам нужно его измерять - тем больше данных нам нужно."
    ]
@@ -843,22 +846,23 @@
     "**Условная вероятность и теорема Байеса**\n",
     "\n",
     "Тут мы подходим к одному из краеугольных камней машинного обучения. Начнем с двух вопросов:\n",
-    "1. Насколько вероятно, что через час будет дождь?\n",
-    "2. Насколько вероятно, что через час будет дождь, если он уже идёт?\n",
+    "1. Насколько вероятно, что через час будет дождь? Пусть это $A$\n",
+    "2. Насколько вероятно, что через час будет дождь, если он уже идёт? Пусть вероятность дождя сейчас $B$.\n",
     "\n",
     "Без математики понятно, что речь идёт о разных ситуациях, что в математике формализуют как *условную вероятность* (определение):\n",
     "\n",
-    "`P(A|B) = P(через час пойдет дождь|дождь идёт сейчас) = P(вероятность что через час будет дождь И сейчас идёт дождь) / P(дождь идёт сейчас)`.\n",
+    "$$P(A|B) = \\frac {P(A \\cap B)} {P(B) }$$\n",
+    "\n",
+    "где $\\cap$ обозначает `И` (пересечение множеств), то есть совместную вероятность обоих случаев сразу.\n",
     "\n",
     "Практически из определения, вытекает **теорема Байеса**:\n",
     "\n",
-    "`P(A|B) = P(B|A) * P(A) / P(B)`.\n",
+    "$$P(A|B) = \\frac {P(B|A) * P(A)} {P(B)}$$\n",
     "\n",
     "В терминах дождей, это означает, что \n",
-    "\n",
     "`вероятность что дождь будет через час, если он идёт сейчас = вероятность дождя сейчас, если он будет через час * вероятность дождя через час / вероятность дождя сейчас`.\n",
     "\n",
-    "В данном примере мы ничего не выигрываем от теоремы, но давайте рассмотрим другую, более практическую задачу."
+    "В данном примере мы ничего напрямую не выигрываем от теоремы (если только мы не метеорологи), но давайте рассмотрим другую, более практическую задачу."
    ]
   },
   {
@@ -871,7 +875,7 @@
     "\n",
     "Мы в темноте вытаскиваем наугад из какой-то корзины ванильное печение. Какова вероятность, что мы вытащили её из первой?\n",
     "\n",
-    "> Жизненный опыт подсказывает, что скорее всего из первой, так как в ней больше ванильных. Посмотрим, что скажет теорема Байеса."
+    "> Жизненный опыт подсказывает, что скорее всего из первой, так как в ней больше ванильных. Теорема Байеса же скажет, что вероятность вытащить из первой равна произведению вероятностей выбрать первую корзину $P(A)$, выбрать из неё ванильную $P(B | A)$, и всё это поделить на вероятность вытащить ванильную из всех корзин $P(B)$."
    ]
   },
   {
@@ -911,9 +915,9 @@
     "\n",
     "`максимум вероятности получить (параметры | датасета)`, и поскольку такую вероятность мы саму по себе не знаём, то \"проворачивают ручку Байеса\":\n",
     "\n",
-    "`вероятность (параметры | данные) = вероятность данных при параметрах * вероятность параметров / вероятность данных`. \n",
+    "`вероятность (параметров | данные) = вероятность данных при параметрах * вероятность параметров / вероятность данных`. \n",
     "\n",
-    "При максимизации вероятности слева, знаменатель справа не меняется (он не зависит от параметров модели), поэтому его даже не считают. Если говорить простыми словами - при машинном обучении часто ищутся те параметры модели, которые имеют максимальную вероятность для имеющегося датасета."
+    "При максимизации вероятности слева, знаменатель справа не меняется (он не зависит от параметров модели), поэтому его даже не всегда считают. Если говорить простыми словами - при машинном обучении часто ищутся те параметры модели, которые имеют максимальную вероятность для имеющегося датасета."
    ]
   },
   {
@@ -1052,7 +1056,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Мы рассмотрим три алгоритма. Линейный (`y = kx + b`, где `k` и `b` такие, чтобы ошибка была наименьшей), алгоритм, строящий решающее дерево (набор правил вида `если x > 5, то y = 2`) и алгоритм ближайших соседей. Второй мы рассмотрим в двух вариантах - с обрезкой по глубине (по количеству вопросов) и без, и метод ближайших соседей, который запоминает данные и выдает усредненные значения по соседям."
+    "Мы рассмотрим три алгоритма. Линейный ($y = kx + b$, где `k` и `b` такие, чтобы ошибка была наименьшей), алгоритм, строящий решающее дерево (набор правил вида `если x > 5, то y = 2`) и алгоритм ближайших соседей. Второй мы рассмотрим в двух вариантах - с обрезкой по глубине (по количеству вопросов) и без, и метод ближайших соседей, который запоминает данные и выдает усредненные значения по нескольким соседям."
    ]
   },
   {
@@ -1196,7 +1200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Из этого изображения вовсе не следует, что линейный алгоритм вот лучше всех (но на этих данных, да, лучше). Это иллюстрация связи \"всех данных в мире\" и уменьшения ошибки с ростом количества данных (как видим с разной скоростью). \n",
+    "Из этого изображения вовсе не следует, что линейный алгоритм вот лучше всех (но на этих данных, да, лучше). Это иллюстрация связи \"всех данных в мире\" и уменьшения ошибки с ростом количества данных (как видим с разной скоростью). Почему здесь линейный случай лучше всего работает - да потому что изначально в наши синтетических данных линейная связь с небольшим шумом.\n",
     "\n",
     "**И тут возникает вопрос... когда алгоритм является PAC-обучаемым?** - то есть будет ли с ростом данных падать ошибка?\n",
     "\n",
@@ -1249,7 +1253,7 @@
     "Как ни странно, все эти знания нам в ближайшей пятидневной практике не понадобятся. Однако из всей этой теории (статистического обучения) вытекает следующее.\n",
     "\n",
     "1. Алгоритмы - работают! Правда, с некоторого количества примеров.\n",
-    "2. Работают не все алгоритмы. Существует теорема \"Нет бесплатных обедов\" (`no free lunch`-теорема), которая говорит, что универсальный алгоритм всегда потерпит неудачу (найдутся для него примеры). То есть мы должны \"подтолкнуть\" алгоритм некоторым знанием о задаче к решению.\n",
+    "2. Работают не все алгоритмы. Существует теорема \"Нет бесплатных обедов\" (`no free lunch`-теорема), которая говорит, что универсальный алгоритм всегда потерпит неудачу (найдутся для него примеры). То есть мы должны \"подтолкнуть\" алгоритм некоторым знанием о задаче к решению. Именно поэтому линейный алгоритм на данных с ростом и весом проявил себя лучше.\n",
     "3. Ошибку следует рассматривать из трех компонент: **неустранимая ошибка** (ошибка идеального классификатора, или `Bayes error rate`), **ошибку аппроксимации** (*смещение*) и **ошибку оценивания** (*разброс*). На этом остановимся подробнее в виде примера."
    ]
   },
@@ -1259,7 +1263,7 @@
    "source": [
     "> Вспомним, что мы можем выбирать алгоритмы. Пока неважно какие. Они могут давать разные множества моделей (как по количеству, так и по их сложности).\n",
     "\n",
-    "**Неустранимая ошибка** - это ошибка идеального классификатора на всех данных. Она даже ниже ошибки разметки человеком, и заложена самой природой данных - представьте что у нас есть описание \"всех данных в мире\" - и тогда *если существует хотя бы какая-нибудь вероятность* принадлежности точки более чем одному классу - неустранимая ошибка имеет место. Для детерминированных данных (не вероятностных) такая ошибка равна нулю.\n",
+    "**Неустранимая ошибка** - это ошибка идеального классификатора на всех данных. Она даже ниже ошибки разметки человеком, и заложена самой природой данных - представьте что у нас есть описание \"всех данных в мире\" - и тогда *если существует хотя бы какая-нибудь вероятность* принадлежности примера более чем одному классу - неустранимая ошибка имеет место. Для детерминированных данных (не вероятностных) такая ошибка равна нулю.\n",
     "\n",
     "**Ошибка смещения** - это ошибка выбора класса алгоритма, возникает когда модели не способны приблизить данные достаточно. \n",
     "\n",
@@ -1425,9 +1429,10 @@
    "metadata": {},
    "source": [
     "Получается несколько случаев, как модель может подходить под данные:\n",
-    "1. Недообучение: низкие метрики на тренировочном и тестовом множестве (\"на всех данных в мире\") - первый случай,\n",
+    "1. Недообучение: низкие метрики на тренировочном и тестовом множестве (которые частный случай \"всех данных в мире\") - первый случай,\n",
     "2. Переобучение: высокие метрики на тренировочном и низкие на тестовом - последний случай,\n",
-    "3. Генерализация: хорошие метрики на обоих множествах - будем считать второй случай.\n",
+    "3. Генерализация: хорошие метрики на обоих множествах - будем считать второй случай,\n",
+    "4. Хорошие метрики на тестовом и слабые на тренировочном - редкий случай, иногда встречается когда тестовые данные слишком малы или сильно отличаются от тренировочных.\n",
     "\n",
     "## Заключение\n",
     "\n",
