--- a/day_2.ipynb
+++ b/day_2.ipynb
@@ -1857,11 +1857,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Линейные модели просты и интерпретируемы, и поэтому чрезвычайно распространены. И при подходящей предобработке признаков - весьма универсальны. Отклик по линейному алгоритму моделируется как линейная комбинация признаков с некоторыми коэффициентами и плюс сдвиг:\n",
+    "Линейные модели просты и интерпретируемы, и поэтому чрезвычайно распространены. И при подходящей предобработке признаков - весьма универсальны. Отклик по линейному алгоритму моделируется как линейная комбинация `m` признаков с некоторыми коэффициентами и плюс сдвиг:\n",
     "\n",
-    "`y = k1 * x1 + k2 * x2 + ... + km * xm + b`\n",
+    "$$y = \\sum k_i x_i + b$$\n",
     "\n",
-    "Всё. Нет, не всё. Существует аналитическое решение (то есть формульно), как найти `k1 ... km, b` такие, чтобы ошибка (конкретно среднее квадратичное отклонение модели от данных) было минимальным. Мы же для целей иллюстрации рассмотрим алгоритм *градиентного спуска*, который применяется во множестве моделях, нейросетях в частности."
+    "Всё. Нет, не всё. Существует аналитическое решение (то есть формульно), как найти `k1, ... km, b` такие, чтобы ошибка (конкретно среднее квадратичное отклонение модели от данных) было минимальным. Мы же для целей иллюстрации рассмотрим алгоритм *градиентного спуска*, который применяется во множестве моделях, нейросетях в частности в различных модификациях."
    ]
   },
   {
@@ -1874,7 +1874,11 @@
     "3. И так сколько раз, сколько захотим (или пока ошибка не начнет меняться очень слабо).\n",
     "\n",
     "Например, если у нас \n",
-    "`y = kx + b`, а ошибка `error = sum((y - (kx - b))**2) / n`, то производная ошибки по `k` будет равна `error_derivative_k = -2 * sum(x * (y - kx - b)) / n`, а для `b`: `-2 * sum(kx - y - b) / n`.\n",
+    "$y = kx + b$, а ошибка $$e = \\frac {\\sum (y - (kx - b))^2} {n},$$\n",
+    "то производная ошибки по `k` будет равна\n",
+    "$$e'_k = -2 \\frac {\\sum(x (y - kx - b))} {n},$$\n",
+    "а для `b`: \n",
+    "$$e'_b = -2 \\frac {\\sum(kx - y - b)} {n}.$$\n",
     "\n",
     "На деле же, существуют фреймворки (библиотеки), которые подобное дифференцирование делают за нас: `tensorflow`, `pytorch`. Их обычно используют для нейросетей. Но тут мы сделаем всё сами, чтобы убедиться, что всё это работает."
    ]
@@ -2120,11 +2124,11 @@
    "source": [
     "Наша модель будет иметь вид\n",
     "\n",
-    "> `y = sigmoid (k1 * x1 + k2 * x2 + ... + km * xm + b)`\n",
+    "$$y = \\sigma (\\sum k_i x_i + b)$$\n",
     "\n",
-    "где *sigmoid*, это следующая функция\n",
+    "где $\\sigma$ (*sigmoid*), это следующая функция\n",
     "\n",
-    "`sigmoid(x) = 1 / (1 + exp(-x))`.\n",
+    "$$\\sigma(x) = \\frac {1} {1 + e^{-x}}.$$\n",
     "\n",
     "Она всегда от 0 до 1 невключительно. Её можно интерпретировать как *вероятность* того, что пример с признаками `x1, ..., xm` относится к классу 1 (а не 0). В `scikit-learn` модель заведена под названием `LogisticRegression` (это не регрессия, несмотря на название, а классификация).\n",
     "\n",
@@ -2741,11 +2745,11 @@
     "\n",
     "Что такое нейронная сеть? Это набор слоёв, на каждом слое - несколько нейронов, каждый из которых это линейная модель, к которой применили *функцию активации*. Нейроны в полносвязной сети на каждом слое связаны со всеми нейронами следующего слоя.\n",
     "\n",
-    "Функция активации - это нелинейная функция, чаще всего это `relu(x) = max(0, x)` или `tanh(x) = (exp(2x) - 1) / (exp(2x) + 1)`. \n",
+    "Функция активации - это нелинейная функция, чаще всего это $relu(x) = max(0, x)$ или $tanh(x) = \\frac {e^{2x} - 1} {e^{2x} + 1}$. \n",
     "\n",
     "![Dense NN](media/nn_dense.png)\n",
     "\n",
-    "В простейшем случае, с одним слоем, одним нейроном и relu-активацией, нейросеть представляет собой функцию `y = max(0, x1 * k1 + x2 * k2 + ... + b)`. В более сложном случае, такое выражение - это каждый нейрон сети. И каждый нейрон по сети \"глубже\" - зависит от вычислений на предыдущих нейронах.\n",
+    "В простейшем случае, с одним слоем, одним нейроном и relu-активацией, нейросеть представляет собой функцию $y = max(0, \\sum x_i k_i + b)$. В более сложном случае, такое выражение - это каждый нейрон сети. И каждый нейрон по сети \"глубже\" - зависит от вычислений на предыдущих нейронах.\n",
     "\n",
     "Чем хороши нейронные сети? Тем что они являются *универсальным аппроксиматором* - то есть ими - при подходящих условиях, можно приближать любые данные."
    ]
