--- a/day_3.ipynb
+++ b/day_3.ipynb
@@ -458,7 +458,7 @@
    "source": [
     "### Principal component analysis (PCA)\n",
     "\n",
-    "`PCA` - это линейное преобразование (то есть `y1 = k11 * x1 + ... + b1`) всех признаков данных, с целью оставить в них как больше информации - а точнее, оставить как можно больше разброса в величинах. Главная компонента - это направление в данных, в котором разброс (вариабельность) этих самых данных наибольшая (и далее берется следующее направление). Направлений столько, сколько признаков в данных.\n",
+    "`PCA` - это линейное преобразование (то есть $y_j = \\sum k_ij x_i + b_j$) всех признаков данных, с целью оставить в них как больше информации - а точнее, оставить как можно больше разброса в величинах. Главная компонента - это направление в данных, в котором разброс (вариабельность) этих самых данных наибольшая (и далее берется следующее направление). Направлений столько, сколько признаков в данных.\n",
     "\n",
     "> **ВАЖНО**: поскольку `PCA` работает с разбросом, все величины надо стандартизировать (вычесть среднее и разделить на разброс), чтобы привести к единой шкале!"
    ]
@@ -650,9 +650,9 @@
     "Кластеризация - задача обучения без учителя, в которой каждому примеру надо сопоставить номер группы (кластера) таким образом, чтобы схожие примеры были в одном кластере. Что значит схожие? Это означает близкие по некоторому расстоянию.\n",
     "\n",
     "Расстояние:\n",
-    "- может быть евклидовым: `distance(a, b) = sqrt((a1 - b1)**2 + ... (ak - bk)**2)`,\n",
-    "- косинусным: `distance(a, b) = 1 - косинус угла между векторами (a, b) = 1 - (a1*b1 + ... ak*bk) / sqrt(a1**2 + ... ak**2) / sqrt(b1**2 + ... bk**2)`,\n",
-    "- манхэттэнским (по координатным прямым между точками): `distance (a, b) = |a1 - b1| + ... |ak - bk|`,\n",
+    "- может быть евклидовым: $d(a, b) = \\sqrt {\\sum (a_i - b_i)^2}$,\n",
+    "- косинусным: `d(a, b) = 1 - косинус угла между векторами (a, b) =` $1 - \\frac { \\sum a_i b_i } {\\sqrt {\\sum a_i ^2} \\sqrt { \\sum b_i^2}}$,\n",
+    "- манхэттэнским (по координатным прямым между точками): $d(a, b) = \\sum |a_i - b_i|$,\n",
     "- есть и другие расстояния.\n",
     "\n",
     "Но как можно найти кластеры в данных? Давайте рассмотрим алгоритм, который разбивает точки на заранее заданное число кластеров.\n",
