--- a/day_5.ipynb
+++ b/day_5.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "Сейчас мы рассмотрим библиотеку `shap` (`SHapely Additive exPlanations`, где в названии, *Shapely* - это фамилия), которая такие предсказания и позволяет делать. И делает это она благодаря некоторым результатам из теории игр.\n",
     "\n",
-    "Представим себе признаки как игроков, а результат \"игры\" - это предсказание модели для этих признаков (разово). Тогда `shap` позволяет судить о вкладе каждого игрока в \"выигрыш\" (предсказание) - для этого рассматривается каждый поднабор из всех признаков (сочетания), от нуля признаков до всех. При добавлении признака в набор, он даёт некоторый вклад (эффект) в предсказание. Все эффекты для вхождений каждого признака количественно взвешиваются, они есть итоговый эффект каждого признака.\n",
+    "Представим себе признаки как игроков, а результат \"игры\" - это предсказание модели для этих признаков (разово). Тогда `shap` позволяет судить о вкладе каждого игрока в \"выигрыш\" (предсказание) - для этого рассматривается каждый поднабор из всех признаков (сочетания), от нуля признаков до всех, и для каждого поднабора учится своя модель. При добавлении признака в набор, он даёт некоторый вклад (эффект) в предсказание. Все эффекты для вхождений каждого признака количественно взвешиваются, они есть итоговый эффект каждого признака.\n",
     "\n",
     "А теперь представьте что у нас (всего) 10 признаков, это означает что нам надо перебрать `2**10` моделей (с различными наборами признаков). Мы, конечно, этим заниматься не будем, и благодаря библиотеке `shap`, умеющей во всевозможные оптимизации подобных вычислений и прочие ухищрения, всё получается быстрее."
    ]
@@ -339,7 +339,7 @@
     "\n",
     "А сейчас мы рассмотрим технику, которая позволяет одновременно отбирать признаки и строить некоторую интерпретацию вида \"мы тут можем ошибаться на столько-то\" (*model perfomance prediction*). Нужно построить регрессор (в случае классификации - классификатор), который будет обучен (на отложенной валидации, поскольку стэкинг) предсказывать ошибки алгоритма.\n",
     "\n",
-    "Посмотрим на эту позаимствованную (получается уже трижды) картинку.\n",
+    "Посмотрим на эту позаимствованную (получается уже дважды) картинку.\n",
     "![MPP](media/mpp.png)"
    ]
   },
@@ -775,7 +775,7 @@
     "\n",
     "С моделями аналогично: `эффект от модели = эффект с моделью - эффект без модели.`\n",
     "\n",
-    "Но что, если мы не знаем какой будет эффект с моделью? Мы можем выделить некоторое подмножество примеров в процессе, которые будут обрабатываться моделью, а остальные как прежде. Те, которые будут обрабатываться как прежде - называются **контрольной группой**, а те что по-новому - **тестовой группой**. Поэтому и A/B-тестирование (хотя бывает еще и A/B/C- и A/B/C/D... - и с этим всё немного сложнее, и нужно реже).\n",
+    "Но что, если мы не знаем какой будет эффект с моделью? Мы можем выделить некоторое подмножество примеров в процессе, которые будут обрабатываться моделью, а остальные как прежде. Те, которые будут обрабатываться как прежде - называются **контрольной группой**, а те что по-новому - **тестовой группой**. Поэтому и A/B-тестирование (хотя бывает еще и A/B/C- и A/B/C/D... - A/B/n - и с этим всё немного сложнее, и нужно реже).\n",
     "\n",
     "Поскольку тестовая и контрольная группа по размерам могут быть (и обычно) разные, мы не можем напрямую сравнивать количество или даже процент ошибок."
    ]
@@ -820,11 +820,11 @@
     "2. для последовательности длиной `n` таких величин с вероятностью \"успеха\" (в нашем случае ошибки) равной `q` есть распределение под названием *биномиальное*, которое описывает количество \"успехов\" по отношению к общему числу,\n",
     "3. в свою очередь, существует распределение (*Beta-распределение*), такое что для серии испытаний длиной `n` с вероятностью \"успеха\" каждого `q`, верно, что `q` распределена как `Beta`.\n",
     "\n",
-    "Количество ошибок и количество правильных - параметры `alpha` и `beta`. При этом `Beta(1, 1)` эквивалентно равномерному распределению - то есть за один эксперимент равновероятно любое значение. Заметим, что его `среднее = alpha / (alpha + beta)`.\n",
+    "Количество ошибок и количество правильных - параметры $\\alpha$ и $\\beta$. При этом `Beta(1, 1)` эквивалентно равномерному распределению - то есть за один эксперимент равновероятно любое значение. Отметим, что его $E = \\frac {\\alpha} {\\alpha + \\beta}$.\n",
     "\n",
     "Подытоживая, процент ошибки у нас распределен как `Beta(errors + 1, correct + 1)` - единицу добавляем до всяких экспериментов как *априорное знание*. *Beta-распределение* - это такое распределение, что после применения теоремы Байеса мы получим то же распределение с другими параметрами. Это очень замечательно, ведь нам не придется вычислять напрямую, и будет:\n",
     "\n",
-    "`P(q) = Beta(alpha, beta)` => `P(q | additional_errors, additional_correct) = Beta(alpha + additional_errors, beta + additional_correct)`.\n",
+    "$$P(q) = Beta(\\alpha, \\beta) => P(q | e, c) = Beta(\\alpha + e, \\beta + c),$$ где `e` - новые ошибки, `c` - новые корректные примеры.\n",
     "\n",
     "Проверим непосредственными испытаниями нашу концепцию."
    ]
