some more on texts

--- a/day_4.ipynb
+++ b/day_4.ipynb
@@ -1734,7 +1734,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Нас будут интересовать `token_embeddings` и `sentence_mean_embeddings`, а точнее косинусное сходство между ними."
+    "Нас будут интересовать `token_embeddings` и `sentence_mean_embeddings`, а точнее косинусное сходство между ними. По аналогии с `TFIDF` - `BERT` лучше работает с косинусным сходством (то есть `+1` - для идентичных примеров, `-1` - для противоположных по смыслу)."
    ]
   },
   {
@@ -1785,13 +1785,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Как можно заметить, результат зависит от контекста."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -1820,8 +1813,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Косинусное сходство это мера угла между векторами: от -1 (противоположные вектора) до +1 (сонаправленные). Почему используется косинусное cходство? Чтобы не влияло количество частей слова или самих слов (то есть \"смысл слова\" в пространстве вложений задается направлением, а не его частями).\n",
-    "\n",
     "Кстати, если вектора преобразовать (разделить на их евклидову длину) - то косинусное расстояние будет выражаться через евклидово расстояние векторов."
    ]
   },
