--- a/day_2.ipynb
+++ b/day_2.ipynb
@@ -1979,7 +1979,7 @@
    "source": [
     "> Congratulations!!\n",
     "\n",
-    "Паззлы сошлись, наша прямая подошла к данным. Замечательнейшая библиотека `scikit-learn` имеет множество вариаций линейных моделей в арсенале. И мы рассмотрим модели линейной регрессии и модель `Ridge`. Линейная модель - минимизирует средний квадрат отклонений предсказанного от истинного и может быть решена алгебраически (то есть без итераций, и работает поэтому быстро). `Ridge` (гребневая регрессия) отличается тем, что *штрафует* модель за абсолютную величину коэффициентов, это часто позволяет переобучения. \n",
+    "Паззлы сошлись, наша прямая подошла к данным. Замечательнейшая библиотека `scikit-learn` имеет множество вариаций линейных моделей в арсенале. И мы рассмотрим модели линейной регрессии и модель `Ridge`. Линейная модель - минимизирует средний квадрат отклонений предсказанного от истинного и может быть решена алгебраически (то есть без итераций, и работает поэтому быстро). `Ridge` (гребневая регрессия) отличается тем, что *штрафует* модель за абсолютную величину коэффициентов, это часто позволяет избегать переобучения. \n",
     "\n",
     "Учтите, что на линейные модели влияют выбросы в данных. Выбросы - это редкие точки, которые сильно отличаются от поведения всех остальных. Часто при препроцессинге их просто удаляют из датасета. Здесь \"плотность\" точек очень высокая, и влияние выбросов небольшое. Для иллюстрации, возьмем только вторую четверть датасета."
    ]
