one more typo fix

--- a/day_5.ipynb
+++ b/day_5.ipynb
@@ -820,7 +820,7 @@
     "2. для последовательности длиной `n` таких величин с вероятностью \"успеха\" (в нашем случае ошибки) равной `q` есть распределение под названием *биномиальное*, которое описывает количество \"успехов\" по отношению к общему числу,\n",
     "3. в свою очередь, существует распределение (*Beta-распределение*), такое что для серии испытаний длиной `n` с вероятностью \"успеха\" каждого `q`, верно, что `q` распределена как `Beta`.\n",
     "\n",
-    "Количество ошибок и количество правильных - параметры $\\alpha$ и $\\beta$. При этом `Beta(1, 1)` эквивалентно равномерному распределению - то есть за один эксперимент равновероятно любое значение. Отметим, что его $E = \\frac {\\alpha} {\\alpha + \\beta}$.\n",
+    "Количество ошибок и количество правильных - параметры $\\alpha$ и $\\beta$. При этом `Beta(1, 1)` эквивалентно равномерному распределению - то есть за один эксперимент равновероятно любое значение. Отметим, что его мат. ожидание $E = \\frac {\\alpha} {\\alpha + \\beta}$.\n",
     "\n",
     "Подытоживая, процент ошибки у нас распределен как `Beta(errors + 1, correct + 1)` - единицу добавляем до всяких экспериментов как *априорное знание*. *Beta-распределение* - это такое распределение, что после применения теоремы Байеса мы получим то же распределение с другими параметрами. Это очень замечательно, ведь нам не придется вычислять напрямую, и будет:\n",
     "\n",
