day one block six - course review

--- a/day_1.ipynb
+++ b/day_1.ipynb
@@ -2695,12 +2695,88 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 50,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# to be done - когда будет весь курс"
+    "Этот обзорный блок о том, с чем курс нас познакомит. \n",
+    "\n",
+    "### Второй день - обучение с учителем\n",
+    "В основном, на моделях из библиотеки `scikit-learn`. Начнем все же со специализированных библиотек работы с массивами, табличными данными и их визуализацией, и уделим внимание *Exploratory Data Analysis* (EDA, разведочный анализ данных). Он в первую очередь нужен для того, чтобы понять что делать с имеющимися признаками и с какого алгоритма имеет смысл начинать.\n",
+    "\n",
+    "Далее на примере задач регрессии и классификации, мы рассмотрим такие алгоритмы, как:\n",
+    "- линейный. В случае классификации он \"пытается\" линейно разделить классы.\n",
+    "\n",
+    "![linear_iris](media/review/linear_iris.png)\n",
+    "\n",
+    "- деревья решений и ансамбли деревьев решений, которые делают разделение на основе \"правил\".\n",
+    "\n",
+    "![tree_iris](media/review/tree_iris.png)\n",
+    "\n",
+    "- ближайших соседей, когда решение принимается исходя из схожих примеров.\n",
+    "\n",
+    "![knn_iris](media/review/knn_iris.png)\n",
+    "\n",
+    "Также на примере ближайших соседей мы посмотрим на базовые способы обработки текстов. С помощью размеченных категорий датасета переписок - мы научимся относить их к определенным классам.\n",
+    "\n",
+    "- неглубоких нейросетей, которые сами ищут такое признаковое представление, чтобы классы были разделимы. \n",
+    "\n",
+    "![ann_iris](media/review/ann_iris.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Третий день - задачи без учителя и временные ряды\n",
+    "\n",
+    "День будет посвящен работе с неразмеченными данными, без меток правильных ответов - да, с такими данными тоже можно что-то проделывать полезное. Но все же начнется со способов автоматического отбора моделей, а затем будут рассмотрены задачи:\n",
+    "- понижения размерности и мы узнаем как можно извлекать из неразмеченных текстов наиболее характеризующие их слова.\n",
+    "- кластеризации, то есть сумеем отнести примеры к той или иной группе, посмотрим один из способов как найти наилучшее число групп,\n",
+    "\n",
+    "![kmeans_iris](media/review/kmeans_iris.png)\n",
+    "\n",
+    "- поиска аномалий в данных, то есть поиска с помощью модели сильно отличающихся от остальных примеров.\n",
+    "\n",
+    "Еще мы узнаем как можно продолжать одномерные временные ряды:\n",
+    "\n",
+    "![prophet_airpassengers](media/review/prophet_airpassengers.png)\n",
+    "\n",
+    "и как можно использовать предсказаний одних моделей как вход для других моделей (на примере погоды)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Четвертый день - нейросети\n",
+    "\n",
+    "Этот день будет полностью нейросетям и некоторым задачам, которые можно решать с помощью них библиотекой `keras`. Классические регрессию и классификацию можно решать не только на табличных данных, но и на изображениях, текстах и многомерных временных рядах, например мы рассмотрим:\n",
+    "\n",
+    "- задачу сжатия представления входных данных до вектора и обратного преобразования с помощью сетей-автокодировщиков.\n",
+    "\n",
+    "![ae_fashion](media/review/ae_fashion.png)\n",
+    "\n",
+    "- задачу сегментации объектов (например наручных часов на изображении) с помощью сети `Unet`.\n",
+    "\n",
+    "![unet_watches](media/review/unet_watches.png)\n",
+    "\n",
+    "- готовые сети работы с изображениями и текстами. Например, построим простого вопросно-ответного-бота. Ему будут известны и вопросы, и ответы, но вопросы могут быть произвольными. Узнаем как возможно извлекать именованные сущности из текста (имена, события и др.), или суммаризировать тексты (извлекать основное из них).\n",
+    "\n",
+    "- посмотрим, как отдавать сети последовательные многомерные данные (не один ряд, а несколько) - на примере всё той же погоды.\n",
+    "\n",
+    "![gru_weather](media/review/gru_weather.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Пятый день - интерпретация, презентация и внедрение моделей\n",
+    "\n",
+    "А пятый день посвящен тому, что модель - это еще не окончание всех дел, а только начало. В частности узнаем, что:\n",
+    "- предсказания моделей можно и нужно интепретировать.\n",
+    "- модели можно и нужно разворачивать как сервис, и делать для них интерактивные презентации.\n",
+    "- так как модели работают с ошибкой, необходимо убеждаться что они действительно улучшают процесс. Делается это через особый дизайн экспериментов."
    ]
   }
  ],
