some text cleanups

--- a/day_5.ipynb
+++ b/day_5.ipynb
@@ -1819,12 +1819,11 @@
     "# Финальное заключение\n",
     "\n",
     "На этом всё заканчивается. За бортом осталось очень многое, в частности из того, что в настоящий момент активно развивается:\n",
-    "- генеративные состязательные сети (generative adversarial networks) - когда две сети генерируют (и делают это лучше VAE) - несуществующие изображения,\n",
-    "- обучение с подкреплением (reinforcement learning) - когда сеть обучается оптимизировать некоторую выгоду с учетом времени (играть в игры или на бирже).\n",
+    "- генеративные состязательные сети (generative adversarial networks) - когда одна сеть учится генерировать (и делает это лучше VAE) - несуществующие изображения (а вторая при этом заставляет её делать это всё лучше),\n",
+    "- обучение с подкреплением (reinforcement learning) - когда сеть обучается оптимизировать некоторую выгоду с учетом времени (играть в игры или на бирже),\n",
+    "- задачи на графах - обычно с помощью вложений. В том числе и задачи с изменением графов во времени.\n",
     "\n",
-    "Все это за пределами вводных концепций. Тем не менее некоторый старт положен. \n",
-    "\n",
-    "**Желаю удачи в проектах!**"
+    "Все это за пределами вводных концепций. Тем не менее, надеюсь, некоторый старт положен. "
    ]
   }
  ],
