--- a/day_5.ipynb
+++ b/day_5.ipynb
@@ -1183,7 +1183,7 @@
     "        estimate = alpha * train['diameter'] + beta * train['whole weight'] + gamma\n",
     "        observed = pymc3.Poisson('rings', mu=estimate, observed=train[target])\n",
     "        \n",
-    "        # MAP - maximum aposteriori - это попытка найти хорошуб стартовую точку для начала сэмплирования        \n",
+    "        # MAP - maximum aposteriori - это попытка найти хорошую стартовую точку для начала сэмплирования        \n",
     "        MAP = pymc3.find_MAP()\n",
     "        \n",
     "        # tune - число \"разогревочных\" сэмплов, мы их рассматривать не будем\n",
