--- a/day_4.ipynb
+++ b/day_4.ipynb
@@ -1061,7 +1061,7 @@
    "source": [
     "## Заключение\n",
     "\n",
-    "Если поучить подольше, то изображения кучковались бы еще лучше - автоэнкодер бы их сильнее различал. Соответственно и вектора различались бы сильнее. Главное, что векторное представление дает нам некоторое скрытое (*латентное*) пространство векторов, с которыми уже можно работать. И да, чем больше размерность вектора скрытого пространства, тем лучше, для отображения вложений лучше использовать `UMAP`."
+    "Если поучить подольше, то изображения кучковались бы еще лучше - автоэнкодер бы их сильнее различал. Соответственно и вектора различались бы сильнее. Главное, что векторное представление дает нам некоторое пространство векторов, с которым уже можно работать. И да, чем больше размерность вектора, тем лучше, для отображения же вложений лучше использовать `UMAP`."
    ]
   },
   {
