some more on texts

--- a/day_2.ipynb
+++ b/day_2.ipynb
@@ -2792,7 +2792,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Далее, для каждого слова - найдем его основу (\"приветики - приветик\"). Это называется *стемминг* (*stemming*). Для английского и некоторых языков, включая русский, такой функционал есть в библиотеке **nltk**. Стемминг нам нужен для того, чтобы не различать форму слова."
+    "Далее, для каждого слова - найдем его основу (\"приветики - приветик\"). Это называется *стемминг* (*stemming*), и это не то же самое, что нахождение корня слова (хотя изредка может совпадать). Для английского и некоторых языков, включая русский, такой функционал есть в библиотеке **nltk**. Стемминг - это детерминированный алгоритм, который работает с гласными/согласными буквами, слогами, по некоторым сложным правилам. Стемминг вообще нам нужен для того, чтобы не различать форму слова."
    ]
   },
   {
